[gd_scene load_steps=3 format=3 uid="uid://cuiv7vpsh4e0h"]

[ext_resource type="Script" uid="uid://u6n2l7gwxshq" path="res://Scripts/UI/AbilityUI.gd" id="1_364ci"]
[ext_resource type="Texture2D" uid="uid://cf2chdpc6pva2" path="res://Art/UI/Abilities/BaseAbility.png" id="2_ctlaa"]

[node name="AbilityUI" type="Panel"]
custom_minimum_size = Vector2(20, 20)
script = ExtResource("1_364ci")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.5
offset_top = -8.0
offset_right = 9.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ctlaa")
expand_mode = 2
stretch_mode = 5

[node name="SellLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 7.0
offset_right = 20.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 8
text = "Sell"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
